update man pages

--- a/launchmon/man/LMON_be_amIMaster.3
+++ b/launchmon/man/LMON_be_amIMaster.3
@@ -68,6 +68,7 @@ Dong H. Ahn <ahn1@llnl.gov>
 .BR LMON_fe_getProctable(3),
 .BR LMON_fe_getProctableSize(3),
 .BR LMON_fe_getResourceHandle(3),
+.BR LMON_fe_regErrorCB(3),
 .BR LMON_be_init(3),
 .BR LMON_be_finalize(3),
 .BR LMON_be_handshake(3),
