--- a/launchmon/man/LMON_fe_attachAndSpawnDaemons.3
+++ b/launchmon/man/LMON_fe_attachAndSpawnDaemons.3
@@ -218,6 +218,7 @@ Dong H. Ahn <ahn1@llnl.gov>
 .BR LMON_fe_getProctable(3),
 .BR LMON_fe_getProctableSize(3),
 .BR LMON_fe_getResourceHandle(3),
+.BR LMON_fe_regErrorCB(3),
 .BR LMON_be_init(3),
 .BR LMON_be_finalize(3),
 .BR LMON_be_getMyRank(3),
