--- a/README
+++ b/README
@@ -1,4 +1,12 @@
-2008-03-11 Dong H. Ahn <ahn1@llnl.gov>
+2009-05-20 Dong H. Ahn <ahn1@llnl.gov>
+	o Added LMON_fe_regErrorCB support
+	o Added a fix for the "re-attach" defect on BGP. 
+	  This requires IBM efix27 or higher.   
+	o Added a fix for user [recv|send]UsrData functions
+	  to return correct error codes. 
+	  Added a new error code (LMON_ENEGCB) to lmon_api_std.h  
+
+2009-03-11 Dong H. Ahn <ahn1@llnl.gov>
         o LaunchMON 0.7X beta release 
         o Added general BlueGene support convering both BlueGene/L 
 	  and BleGene/P
