--- a/launchmon/man/LMON_fe_launchAndSpawnDaemons.3
+++ b/launchmon/man/LMON_fe_launchAndSpawnDaemons.3
@@ -81,6 +81,9 @@ Timed out while waiting for connections.
 .TP
 .B LMON_EBUG:
 A plain bug.
+.TP
+.B LMON_EINVAL:
+An error encountered while waiting on some events from other dependent component such as the LaunchMON engine.
 
 .SH ENVIRONMENT VARIABLES
 .TP
