--- a/ChangeLog
+++ b/ChangeLog
@@ -1,15 +1,15 @@
 2009-05-20 Dong H. Ahn <ahn1@llnl.gov>
 	* Added LMON_fe_regErrorCB support
-	* Added a fix for the "re-attach" defect on BGP. 
-	  This requires IBM efix27 or higher.
-	* Added a fix for user [recv|send]UsrData functions
+	* Added a fix for the "re-attach" defect on BlueGene/P. 
+	  The fix requires the IBM efix27 or higher.
+	* Added a fix for the back-end and front-end [recv|send]UsrData functions
 	  to return correct error codes. Added a new error code 
 	  (LMON_ENEGCB) to lmon_api_std.h to deal with a
 	  negative code returning from user-provided 
 	  pack/unpack callback routines.  
-	* Changed library version to -version-info 1:0:1 
-	  This is because new API calls have been added and 
-	  implementation has been enhanced.
+	* Changed the library version to -version-info 1:0:1.
+	  It is because this revision added new API calls and 
+	  bug fixes for existing API calls.
 
 
 2009-03-11 Dong H. Ahn <ahn1@llnl.gov>
