man page update

--- a/launchmon/man/LMON_be_finalize.3
+++ b/launchmon/man/LMON_be_finalize.3
@@ -79,6 +79,7 @@ Dong H. Ahn <ahn1@llnl.gov>
 .BR LMON_fe_getProctableSize(3),
 .BR LMON_fe_getResourceHandle(3),
 .BR LMON_fe_regErrorCB(3),
+.BR LMON_fe_regStatusCB(3),
 .BR LMON_be_getMyRank(3),
 .BR LMON_be_getSize(3),
 .BR LMON_be_amIMaster(3),
