--- a/launchmon/man/LMON_fe_getProctable.3
+++ b/launchmon/man/LMON_fe_getProctable.3
@@ -92,6 +92,7 @@ Dong H. Ahn <ahn1@llnl.gov>
 .BR LMON_fe_sendUsrDataBe(3),
 .BR LMON_fe_recvUsrDataBe(3),
 .BR LMON_fe_regErrorCB(3),
+.BR LMON_fe_regStatusCB(3),
 .BR LMON_be_init(3),
 .BR LMON_be_finalize(3),
 .BR LMON_be_getMyRank(3),
