--- a/launchmon/man/LMON_fe_launchAndSpawnDaemons.3
+++ b/launchmon/man/LMON_fe_launchAndSpawnDaemons.3
@@ -151,7 +151,7 @@ Interface (APAI), RM_job is equal to RM_daemon.
 to the tool FEN.
 .PP
 \fBB.1.\fR interrupt interface
-       lmon_rc_e LMON_fe_regStatusCB (int (*func) (void *status))
+       lmon_rc_e LMON_fe_regStatusCB (int sessionHandle, int (*func) (void *status))
 .PP
 The interface passes to the call-back function the session status 
 via the status argument. It encodes the status using the lowest 
