pick up main line changes

--- a/tools/pmgr_collective/ChangeLog
+++ b/tools/pmgr_collective/ChangeLog
@@ -1,3 +1,49 @@
+
+2009-12-14 Dong Ahn <ahn1@llnl.gov>
+	* Merge mainline changes from 2008-06-25 to 2008-01-28
+	into this branch
+	
+2008-06-25 Adam Moody <moody20@llnl.gov>
+
+	* src/pmgr_collective_mpirun.c,
+	  src.pmgr_collective_client.c : Added static keyword to all variables and
+	  functions used within a file to prevent exposing these symbols as external
+	  in the library.
+
+2008-06-18 Adam Moody <moody20@llnl.gov>
+
+	* src/pmgr_collective_client.c : Added ability to run as a single-task job
+	  if MPIRUN_* variables are not found in environment.  This gives a way
+	  to run job serially without needed mpirun or srun.
+	  Added scatter tree when scattering from rank 0.
+	  Rewrote debug levels so that rank 0 prints for 1-3, ranks 0 and N-1 print
+	  for 4-6, and all ranks print for 7-9.
+	  At debug level 3, environment variables values are printed to stdout.
+	  Added error messages for failed read/write from client to mpirun process.
+	  Added error messages for failed read/write to parent and children processes.
+	  Creates a psuedo unique id by combining bits from the timestamp seconds and
+	  the pid for a 1 task job.
+
+	* src/pmgr_collective_mpirun.c : Adjusted error messages to make them more
+	  uniform.
+
+	* src/pmgr_collective_common.c : Added errors messages to pmgr_read_fd()
+	  and pmgr_write_fd().
+
+2008-05-19 Adam Moody <moody20@llnl.gov>
+
+	* src/pmgr_collective_client.c : Use rand_r() instead of srand() to avoid
+	  overwriting random seed a user may have specified (from OSU).
+
+2008-05-18 Adam Moody <moody20@llnl.gov>
+
+	* src/pmgr_collective_client.c : Added IP:port info to error message
+	  on failed connect to track down bad hardware faster.
+
+2008-01-28 Adam Moody <moody20@llnl.gov>
+
+	* test/client.c : Added data correctness test for each collective.
+
 2008-03-14 Dong Ahn <ahn1@llnl.gov>
 	
 	* Customize the package for tools use.
